--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/core-style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
+    <title>E-Library</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,4 +45,13 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script src="%PUBLIC_URL%/js/jquery/jquery-2.2.4.min.js"></script>
+  <!-- Popper js -->
+  <script src="%PUBLIC_URL%/js/popper.min.js"></script>
+  <!-- Bootstrap js -->
+  <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+  <!-- Plugins js -->
+  <script src="%PUBLIC_URL%/js/plugins.js"></script>
+  <!-- Active js -->
+  <script src="%PUBLIC_URL%/js/active.js"></script>
 </html>
