--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/core-style.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
