--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/plugins.css" />
     <!-- Bootstap CSS -->
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" /> -->
     <!-- Main Style CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/responsive.css" />
@@ -40,6 +40,13 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>E-Library</title>
   </head>
   <body>
