--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/img/e-library.png" />
+    <link
+      rel="icon"
+      href="https://res.cloudinary.com/dps6fac1c/image/upload/v1613621648/images/e-library_uxmixc.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/images/favicon.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://res.cloudinary.com/dps6fac1c/image/upload/v1613621648/images/e-library_uxmixc.png"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://res.cloudinary.com/dps6fac1c/image/upload/v1613621648/images/e-library_uxmixc.png"
+    />
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="%PUBLIC_URL%/css/plugins.css" />
     <!-- Bootstap CSS -->
